FusionForge-5.1:
* Theme: new Funky Theme (Capgemini)
* Docman: new UI (Capgemini)
* Docman: extract documents and directories as zip archive (Capgemini)
* Trackers: New progressbar to view completion state (when custom status field is used) (Alain Peyrat)
* Trackers: Sorting improved to allow text & select fields (Alcatel-Lucent)
* [#127] Patch to auto approve projects.
* scmgit plugin now allows project members to request a personal git
  repository as a clone of the current project's one
* New blocks plugin, to add free HTML blocks on top of each tools of the project allowing
  admins to add free descriptions (Alcate-Lucent), (better with fckeditor plugin).
* New unobstructive tooltip system based on jquery and tipsy to replace old help window (Alcatel-Lucent)

FusionForge-5.0.2:
* Maintenance release, bugfixes mostly.

FusionForge-5.0.1:
* Maintenance release, bugfixes and translations only.

FusionForge-5.0:
* New projectlabels plugin, to tag projects with snippets of
  user-defined HTML (developed for/sponsored by Adullact)
* New extratabs plugin, to add tabs with links to arbitrary URLs
  (Adullact again)
* New globalsearch, allowing cross-forge searching of projects
* Users can log in with their email address (in addition to login
  name) if sys_require_unique_email is true (developed for/sponsored by AdaCore)
* Site admin can now optionally enforce the acceptance of terms of use
  on account creation (AdaCore again)
* Site admin can now optionnally block anonymous downloads from the
  FRS (AdaCore again)
* New command-line scripts to inject users, groups and file releases
  into the database from text files (AdaCore again)
* Trackers: The list of fields displayed when browsing the list of artifacts
  can now be defined (Alcatel-Lucent)
* Trackers: The description field can now be updated/corrected (Alcatel-Lucent)
* Trackers: It is now possible to force a custom field to be mandatory (Alcatel-Lucent)